--- a/ub1/ub1.tex
+++ b/ub1/ub1.tex
@@ -15,7 +15,10 @@
   \item 
   \item	Physical laws are based on the virtual models and describe best the modeled system. These laws are represented by mathematical equations that must be solved 
   		using numerical methods, and this requires a lot of computing power. In addition, a model have a lot of parameters, which in turn complicates the equations.
-  \item Virtual  models may not display the reality correctly, they should serve as a supportive agent in the model and allow the user to simulate the influence of some paramter.
+  \item Virtual  models may not display the reality correctly, they should serve as a supportive 
+  		agent in the model and allow the user to simulate the influence of some paramters.
+  		With this adapted model you can model for ex. one specific part of a problem domain, so that the number of parameters is kept small. 
+  		In such a model  you can now vary individual parameters and study the "output" of the model, so that a complete virtual model is not absolutely necessary.
   
 \end{enumerate}
 
