Umstrukturierung der Filestruktur

--- a/document.tex
+++ b/document.tex
@@ -83,7 +83,7 @@
 %METAINFORMATIONEN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[
-	pdftitle={Modeling and Simulation Excercise},
+	pdftitle={Modeling and Simulation Excercises},
 	pdfauthor={Alexander Rimer},
 	colorlinks=true,
     linkcolor=black,
@@ -107,14 +107,8 @@
 %DOKUMENT BEGINN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}  
-%Title 
-\begin{figure}
-\centering
-{\Huge Model Building and Simulation (MODUS)}\\[0.5cm]
-{\Huge Exercise 1}\\[0.5cm]
-{\Large Alexander Rimer}\\[0.6cm]  
-\today
-\end{figure}
+
+ 
 
 %Die Uebungen    
 \include{ub1/ub1}
