--- a/ub1/ub1.tex
+++ b/ub1/ub1.tex
@@ -1,3 +1,12 @@
+%Title 
+\begin{figure}
+\centering
+{\Huge Model Building and Simulation (MODUS)}\\[0.5cm]
+{\Huge Exercise 1}\\[0.5cm]
+{\Large Alexander Rimer}\\[0.6cm]  
+\today
+\end{figure}
+
 \section{Philosophy of science} 
 \begin{enumerate}
 	\item
