--- a/document.tex
+++ b/document.tex
@@ -7,7 +7,7 @@
 \usepackage{bibgerm}			%fuer aufwendigeres literaturverzeichnis mit themes
 %\usepackage{amssymb}			% wichtige Symbole
 \usepackage{graphics}			% Einbinden von Graphiken
-\usepackage[pdftex]{graphicx}
+\usepackage[pdftex]{graphicx} 
 \usepackage{epstopdf}			%automatischen generieren von pdfs aus eps
 \usepackage{array}
 \usepackage[centertags]{amsmath} 
@@ -107,7 +107,7 @@
 %DOKUMENT BEGINN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}  
-
+\setcounter{chapter}{1}
  
 
 %Die Uebungen    
