kleine fehler beseitigt

--- a/document.tex
+++ b/document.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,german,bibliography=totoc]{scrreprt}   
+\documentclass[german,bibliography=totoc]{scrreprt}   
 %BCOR8.25mm seht hier bei für den abstand von der linken seite, da diese
 % gebunden wird
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -100,7 +100,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %PYTHON HIGHLIGHTING
 
-\include{code_formatter/pythonlisting}
+\include{code_formatter/pythonlisting} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -111,7 +111,7 @@
  
 
 %Die Uebungen    
-\include{ub1/ub2.tex}
+\include{ub1/ub2}
 
 
 \end{document}
