--- a/ub1/ub2.tex
+++ b/ub1/ub2.tex
@@ -21,11 +21,11 @@ is best modelled by a dynamic process since all these constraints influence each
  \end{figure}
   
 \textbf{b)}\\
-\textbf{The consumer:}\\
+\textbf{The customer:}\\
 The customer deciding which queue to enter is best modeled as an agent. The model would address the question which queue the consumer would enter which would depend on the answers to following questions:
 \begin{itemize}
   \item How many queues are free?
-  \item In which queue am I going to be served the fastest?
+  \item In which queue am I going to be served the fastest? 
   		\begin{itemize}
   		  \item How long are the different queues?
   		  \item How full are the carts of the others in the queue?
@@ -41,15 +41,15 @@ The model would address the following questions:
   \item How many customers are in the shop at this moment?
     \item How many open queues do I need?
       \item How many customers are in average  in an hour in the shop?
-        \item How many salespersons do I need 
+        \item How many salespersons do I need? 
         \item How fast are the salespersons?
         \item What is the maximum capacity of a queue?
 \end{itemize}
-The model would look similar to the bank office model, where queues can be added or subtracted via a slider.\\\\
+The model would look similar to the bank office model, where queues can be added or subtracted via a slider. So it would be a ' discrete-event' model.\\\\
 \textbf{The store designer:}\\
 As the store designer the task is to find the checkout area which is the most efficient one 
 (= checking out 100 customers in 1 hour with the fewest employees). Using discrete event models different
 kind of checkout areas are simulated (e.g. several queues, just one queue with several tellers, different
 sort of queues (where there is one queue in which only customers with five or less items are allowed to check out 
-or self-check out areas)). Then 100 customers will try to checkout within 1 hour. The model with the fewest tellers wins.
+or self-check out areas)). Then 100 customers will try to checkout within 1 hour. the model which checks out 100 customers in 1 h with the fewest tellers wins.
 
