Ex. 4 nearly done..

--- a/document.tex
+++ b/document.tex
@@ -1,4 +1,4 @@
-\documentclass[german,bibliography=totoc]{scrreprt}   
+\documentclass[bibliography=totoc,a4paper]{scrreprt}   
 %BCOR8.25mm seht hier bei für den abstand von der linken seite, da diese
 % gebunden wird
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -12,7 +12,7 @@
 \usepackage{array}
 \usepackage[centertags]{amsmath} 
 \usepackage{amsfonts}			% Schriftart
-\usepackage{a4}				% Seitenformat
+\usepackage{a4}				% Seitenformat 
 \usepackage{epsfig}				% Zusaetzliche Graphikbefehle 
 \usepackage{floatflt}			% Tabellen
 \usepackage{scrpage2}			% useheadings
@@ -115,7 +115,7 @@
  
 
 %Die Uebungen    
-\include{ub1/ub3}
+\include{ub1/ub4}
 
 
 \end{document}
