--- a/ub1/ub4.tex
+++ b/ub1/ub4.tex
@@ -49,7 +49,7 @@ iii)
 	  \item Customers standardized (socio - economic-characteristics not of importance)
 	  \item Customer arrival rates, time of day, different products, etc. are abstracted (not important)
 	\end{itemize}
-
+	
 \textbf{Assumptions:}
 	\begin{itemize}
 	  \item Optimal queues: no queue-jumping
@@ -58,11 +58,14 @@ iii)
 	\end{itemize}
 
 
-
-
-					
-\subsection{Graphical representation}
- 
+\subsection{Conceptual model, a graphical representation}
+The following shows a graphical representation of the conceptual model which is explained  in task 1.
+	\begin{figure}[!htb]
+  \centering   
+  \includegraphics[width=1\textwidth]{pics/ub4/dia} 
+  \caption{graphical representation of the model}
+  \label{fig:dia} 
+ \end{figure}
 
 \section{Design of experiments}
 How can a farmer work the best potato sort - fertilizer combination out?\\
