--- a/ub1/ub4.tex
+++ b/ub1/ub4.tex
@@ -28,7 +28,7 @@ ii)
 	\textbf{Inputs:}
 		\begin{itemize}	
 		  \item number of customers in queue (max. 10 for ``normals'', max. 25 for VIPs)
-		  \item number of employees at counter
+		  \item number of employees at counter  (max. 6)
 		  \item service time (at counter)
 		  \item arrival rates of customers
 		\end{itemize}
